# esr-detection

./: .gitignore  README.md  beta.txt  inference.c  inference.cpp  inference.h  inference.hpp  makefile  output.txt  test.c  test.cpp
cpp/: CMakeLists.txt  beta.txt  inference.cpp  inference.h  test.cpp
cpp/compute-mfcc/: compute-mfcc  compute-mfcc.cc  mfcc.cpp
python_code/: preprocess_and_train.ipynb
